Fix tags display in the frontend
In smaller displays when an article had way too many tags they were
overlapping each other.
This commit fixes that by adding a `display: inline-block` rule to the
tags.

--- a/themes/herring-cove/static/css/hc.css
+++ b/themes/herring-cove/static/css/hc.css
@@ -435,6 +435,7 @@ img
   color: #b6b6b6;
   border-bottom: 2px #d90006 solid;
   padding: 10px;
+  display: inline-block;
 }
 
 #article .tags a.tag:hover
